# sort

./: Algorytmy.docx  CMakeLists.txt  main.cpp
include/: heapsort.h  introspective_sort.h  merge_sort.h  quicksort.h
